--- a/Localisation/AR.json
+++ b/Localisation/AR.json
@@ -99,8 +99,8 @@
         "Let's make the app even cooler together!": "دعونا نجعل التطبيق أروع معًا!",
         "MILESTONE SEASON CAR": "سيارة الموسم البارزة",
         "Main campaigns": "الحملات الرئيسية",
-        "Meet the CSR2 update 6.0.1! \n\nWhat's new: \n- THE ELITE DREAM TEAM IS HERE: automatic tuning, racing, fuel, improvements \n- Decades later, Jerry encounters an old rival. Is it a simple coincidence or a sign of something more sinister? (RETURN-Rev-Up event) \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "تعرف على تحديث CSR2 6.0.1 إصدار \n\nما الجديد: \n- فريق الأحلام المتميز قد وصل: ضبط تلقائي، سباق، وقود، تحسينات \n- بعد عقود، يقابل جيري منافسًا قديمًا. هل هي صدفة بسيطة أم إشارة لشيء أكثر شرًا؟ (حدث RETURN-Rev-Up) \n-إصلاح الأخطاء والتحسين \n\nتحقق من Linker للتنزيل. سباق سعيد!",
-        "Meet the hub update 1.1.5! \nWhat's new: \n- DONATE: enabled and top-donates added\n- AUTOSHOW: added fast snap-full export\n- gitbox-mini: updated visual special for gacha imports\n- added special hyperlink to our email\n- fix errors and optimization \n\nHappy racing!": "تحديث المركز 1.1.5! \nما الجديد: \n- التبرعات: مفعلة وتم إضافة أكبر المتبرعين\n- العرض التلقائي: تمت إضافة تصدير سريع لملف snap-full\n- gitbox-mini: تم تحديث المؤثرات البصرية لواردات gacha\n- تمت إضافة رابط تشعبي خاص لبريدنا الإلكتروني\n- إصلاح الأخطاء وتحسين الأداء \n\nسباق سعيد!",
+        "Meet the CSR2 update 6.0! \n\nWhat's new: \n- THE ELITE DREAM TEAM IS HERE: automatic tuning, racing, fuel, improvements \n- Decades later, Jerry encounters an old rival. Is it a simple coincidence or a sign of something more sinister? (RETURN-Rev-Up event) \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "تعرف على تحديث CSR2 6.0 إصدار \n\nما الجديد: \n- فريق الأحلام المتميز قد وصل: ضبط تلقائي، سباق، وقود، تحسينات \n- بعد عقود، يقابل جيري منافسًا قديمًا. هل هي صدفة بسيطة أم إشارة لشيء أكثر شرًا؟ (حدث RETURN-Rev-Up) \n-إصلاح الأخطاء والتحسين \n\nتحقق من Linker للتنزيل. سباق سعيد!",
+        "Meet the hub update 1.2.0! \nWhat's new: \n- NEW SECTION: SEASONS\n- NEW SECTION: PROFILE STYLE\n- WR: added driver profiles\n- AUTOSHOW: added direct link share\n- fix errors and optimization\n- other minor changes \n\nHappy racing!": "تعرف على تحديث المركز 1.2.0!\nما الجديد:\n- قسم جديد: المواسم\n- قسم جديد: نمط الملف الشخصي\n- سجلات العالم: أضفنا ملفات تعريف السائق\n- العرض التلقائي: أضفنا مشاركة الرابط المباشر\n- إصلاح الأخطاء والتحسين\n- تغييرات طفيفة أخرى\n\nقيادة سعيدة!",
         "Music clip": "مقطع موسيقي",
         "Music volume": "مستوى الموسيقى",
         "NEW": "جديد",
@@ -182,6 +182,34 @@
         "finished - {0} seconds": "تم الانتهاء - {0} ثانية",
         "finishing release...": "جاري إنهاء الإصدار...",
         "text coming soon...": "النص قريبًا...",
-        "unpacking...": "جاري فك الضغط..."
+        "unpacking...": "جاري فك الضغط...",
+        "Ranking position: ": "الترتيب: ",
+        "Total: ": "الإجمالي: ",
+        " points": " نقطة",
+        " cars": " سيارة",
+        "Prize": "الجائزة",
+        "Prestige": "البرستيج",
+        "Hey, buddy. It was one of the earliest seasons of the game... There were no prize cars back then.": "مرحبًا يا صديقي. كانت هذه واحدة من أوائل المواسم في اللعبة... لم تكن هناك سيارات جوائز في ذلك الوقت.",
+        "Hello, sweetie. It was one of the earliest seasons of the game. There was no prize cup back then.": "مرحبًا يا عزيزي. كان هذا أحد أوائل مواسم اللعبة. لم يكن هناك كأس جوائز في ذلك الوقت.",
+        "BEST CAR": "أفضل سيارة",
+        "SHARE THIS CAR:": "مشاركة هذه السيارة:",
+        "DIRECT LINK": "رابط مباشر",
+        "IMAGE EXPORT": "تصدير الصورة",
+        "CANCEL": "إلغاء",
+        "PROFILE STYLES VIEWER": "عارض ستايلات الملف الشخصي",
+        "Only complete sets are displayed": "يتم عرض المجموعات الكاملة فقط",
+        "SEASONS": "المواسم",
+        "PROFILE STYLE": "ستايل الملف الشخصي",
+        "Here you can see the key cars of each season": "هنا يمكنك رؤية السيارات الأساسية لكل موسم",
+        "These are the prize cars of the current season of the crew championship": "هذه هي سيارات الجوائز للموسم الحالي من بطولة الطاقم",
+        "But that's not all, click here": "ولكن هذا ليس كل شيء، انقر هنا",
+        "These cars will be used in the current season's Prestige Cup, isn't that great?": "هذه السيارات سيتم استخدامها في كأس البريستيج للموسم الحالي، أليس هذا رائعًا؟",
+        "You can also check other seasons, let's watch the previous one": "يمكنك أيضًا التحقق من المواسم الأخرى، دعنا نشاهد الموسم السابق",
+        "To quickly return to the current season at any time, simply click on the crew emblem": "للعودة بسرعة إلى الموسم الحالي في أي وقت، ما عليك سوى النقر على شعار الطاقم",
+        "And of course, you can go straight to the AUTOSHOW by clicking on the car!": "وبالطبع، يمكنك الذهاب مباشرة إلى AUTOSHOW بالنقر على السيارة!",
+        "MILESTONE": "مرحلة هامة",
+        "Finally we can see the key cars of each season. Come with me, I'll show you!": "أخيرًا يمكننا رؤية السيارات الأساسية لكل موسم. تعال معي، سأريك!",
+        "Jess Discord Bot": "بوت جيس على ديسكورد",
+        "Did you know I have a Discord bot? I joined Discord at TheMaintainers' request. Use the additional features and quick access to information when you can't use the hub.": "هل تعلم أن لدي بوت على ديسكورد؟ انضممت إلى ديسكورد بطلب من TheMaintainers. استخدم الميزات الإضافية والوصول السريع إلى المعلومات عندما لا تتمكن من استخدام المنصة."
     }
 }
