--- a/Localisation/DE.json
+++ b/Localisation/DE.json
@@ -99,8 +99,8 @@
         "Let's make the app even cooler together!": "Lassen Sie uns die App gemeinsam noch cooler machen!",
         "MILESTONE SEASON CAR": "MEILENSTEIN SEASON AUTO",
         "Main campaigns": "Hauptkampagnen",
-        "Meet the CSR2 update 6.0.1! \n\nWhat's new: \n- THE ELITE DREAM TEAM IS HERE: automatic tuning, racing, fuel, improvements \n- Decades later, Jerry encounters an old rival. Is it a simple coincidence or a sign of something more sinister? (RETURN-Rev-Up event) \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "Treffen Sie das CSR2-Update 6.0.1! \n\nWas ist neu: \n- DAS ELITE-DREAM-TEAM IST DA: automatisches Tuning, Rennen, Treibstoff, Verbesserungen \n- Jahrzehnte später trifft Jerry auf einen alten Rivalen. Ist es ein simpler Zufall oder ein Zeichen für etwas Unheimlicheres? (RETURN-Rev-Up-Event) \n-Fehlerbehebungen und Optimierungen \n\nCheck Linker zum Download. Happy Racing!",
-        "Meet the hub update 1.1.5! \nWhat's new: \n- DONATE: enabled and top-donates added\n- AUTOSHOW: added fast snap-full export\n- gitbox-mini: updated visual special for gacha imports\n- added special hyperlink to our email\n- fix errors and optimization \n\nHappy racing!": "Trefft das Hub-Update 1.1.5! \nWas ist neu: \n- SPENDEN: aktiviert und Top-Spenden hinzugefügt\n- AUTOSHOW: Schneller Snap-Full-Export hinzugefügt\n- gitbox-mini: Aktualisierte visuelle Spezialeffekte für Gacha-Importe\n- Spezieller Hyperlink zu unserer E-Mail hinzugefügt\n- Fehler behoben und Optimierung \n\nViel Spaß beim Rennen!",
+        "Meet the CSR2 update 6.0! \n\nWhat's new: \n- THE ELITE DREAM TEAM IS HERE: automatic tuning, racing, fuel, improvements \n- Decades later, Jerry encounters an old rival. Is it a simple coincidence or a sign of something more sinister? (RETURN-Rev-Up event) \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "Treffen Sie das CSR2-Update 6.0! \n\nWas ist neu: \n- DAS ELITE-DREAM-TEAM IST DA: automatisches Tuning, Rennen, Treibstoff, Verbesserungen \n- Jahrzehnte später trifft Jerry auf einen alten Rivalen. Ist es ein simpler Zufall oder ein Zeichen für etwas Unheimlicheres? (RETURN-Rev-Up-Event) \n-Fehlerbehebungen und Optimierungen \n\nCheck Linker zum Download. Happy Racing!",
+        "Meet the hub update 1.2.0! \nWhat's new: \n- NEW SECTION: SEASONS\n- NEW SECTION: PROFILE STYLE\n- WR: added driver profiles\n- AUTOSHOW: added direct link share\n- fix errors and optimization\n- other minor changes \n\nHappy racing!": "Trefft das Hub-Update 1.2.0!\nWas ist neu:\n- NEUE RUBRIK: SAISONS\n- NEUE RUBRIK: PROFIL-STIL\n- Weltrekorde: Fahrerprofile hinzugefügt\n- AUTOSHOW: Direkte Link-Freigabe hinzugefügt\n- Fehlerbehebungen und Optimierungen\n- Weitere kleinere Änderungen\n\nViel Spaß beim Rennen!",
         "Music clip": "Musik",
         "Music volume": "Musik-Lautstärke",
         "NEW": "NEU",
@@ -182,6 +182,34 @@
         "finished - {0} seconds": "abgeschlossen - {0} Sekunden",
         "finishing release...": "Release wird abgeschlossen...",
         "text coming soon...": "Text kommt bald...",
-        "unpacking...": "wird entpackt..."
+        "unpacking...": "wird entpackt...",
+        "Ranking position: ": "Rangplatz: ",
+        "Total: ": "Gesamt: ",
+        " points": " Punkte",
+        " cars": " Autos",
+        "Prize": "Preis",
+        "Prestige": "Prestige",
+        "Hey, buddy. It was one of the earliest seasons of the game... There were no prize cars back then.": "Hey, Kumpel. Das war eine der frühesten Spielzeiten des Spiels... Damals gab es keine Preisautos.",
+        "Hello, sweetie. It was one of the earliest seasons of the game. There was no prize cup back then.": "Hallo, Süße. Das war eine der frühesten Spielzeiten des Spiels. Damals gab es keinen Preis-Pokal.",
+        "BEST CAR": "BESTES AUTO",
+        "SHARE THIS CAR:": "DIESES AUTO TEILEN:",
+        "DIRECT LINK": "DIREKTLINK",
+        "IMAGE EXPORT": "BILDEXPORT",
+        "CANCEL": "ABBRECHEN",
+        "PROFILE STYLES VIEWER": "PROFIL-STIL-BETRACHTER",
+        "Only complete sets are displayed": "Nur komplette Sets werden angezeigt",
+        "SEASONS": "SPIELZEITEN",
+        "PROFILE STYLE": "PROFILSTIL",
+        "Here you can see the key cars of each season": "Hier siehst du die Schlüsselautos jeder Saison",
+        "These are the prize cars of the current season of the crew championship": "Dies sind die Preisautos der aktuellen Saison der Crew-Meisterschaft",
+        "But that's not all, click here": "Aber das ist nicht alles, klicke hier",
+        "These cars will be used in the current season's Prestige Cup, isn't that great?": "Diese Autos werden im Prestige-Cup der aktuellen Saison verwendet, ist das nicht großartig?",
+        "You can also check other seasons, let's watch the previous one": "Du kannst auch andere Spielzeiten checken, lass uns die vorherige ansehen",
+        "To quickly return to the current season at any time, simply click on the crew emblem": "Um schnell zur aktuellen Saison zurückzukehren, klicke einfach auf das Crew-Emblem",
+        "And of course, you can go straight to the AUTOSHOW by clicking on the car!": "Und natürlich kannst du direkt zum AUTOSHOW gehen, indem du auf das Auto klickst!",
+        "MILESTONE": "MEILENSTEIN",
+        "Finally we can see the key cars of each season. Come with me, I'll show you!": "Endlich können wir die Schlüsselautos jeder Saison sehen. Komm mit, ich zeige es dir!",
+        "Jess Discord Bot": "Jess Discord-Bot",
+        "Did you know I have a Discord bot? I joined Discord at TheMaintainers' request. Use the additional features and quick access to information when you can't use the hub.": "Wusstest du, dass ich einen Discord-Bot habe? Ich bin Discord auf Bitte von TheMaintainers beigetreten. Nutze die zusätzlichen Funktionen und den schnellen Zugriff auf Informationen, wenn du den Hub nicht nutzen kannst."
     }
 }
