--- a/Localisation/IT.json
+++ b/Localisation/IT.json
@@ -99,8 +99,8 @@
         "Let's make the app even cooler together!": "Rendiamo l'app ancora più fantastica insieme!",
         "MILESTONE SEASON CAR": "AUTO STORICA DELLA STAGIONE",
         "Main campaigns": "Campagne principali",
-        "Meet the CSR2 update 6.0.1! \n\nWhat's new: \n- THE ELITE DREAM TEAM IS HERE: automatic tuning, racing, fuel, improvements \n- Decades later, Jerry encounters an old rival. Is it a simple coincidence or a sign of something more sinister? (RETURN-Rev-Up event) \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "Ecco l'aggiornamento 6.0.1 di CSR2! \n\nNovità: \n- È ARRIVATO IL TEAM D'ÉLITE: messa a punto automatica, corse, carburante, miglioramenti \n- Decenni dopo, Jerry incontra un vecchio rivale. È una semplice coincidenza o il segno di qualcosa di più sinistro? (evento RETURN-Rev-Up) \n-Correzione di errori e ottimizzazioni \n\nControlla Linker per il download. Buone corse!",
-        "Meet the hub update 1.1.5! \nWhat's new: \n- DONATE: enabled and top-donates added\n- AUTOSHOW: added fast snap-full export\n- gitbox-mini: updated visual special for gacha imports\n- added special hyperlink to our email\n- fix errors and optimization \n\nHappy racing!": "Ecco l'aggiornamento dell'hub 1.1.5! \nNovità: \n- DONAZIONI: abilitate e aggiunte le donazioni principali\n- AUTOSHOW: aggiunta l'esportazione rapida snap-full\n- gitbox-mini: aggiornato l'effetto visivo speciale per le importazioni gacha\n- aggiunto hyperlink speciale alla nostra email\n- correzione di errori e ottimizzazione \n\nBuone corse!",
+        "Meet the CSR2 update 6.0! \n\nWhat's new: \n- THE ELITE DREAM TEAM IS HERE: automatic tuning, racing, fuel, improvements \n- Decades later, Jerry encounters an old rival. Is it a simple coincidence or a sign of something more sinister? (RETURN-Rev-Up event) \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "Ecco l'aggiornamento 6.0 di CSR2! \n\nNovità: \n- È ARRIVATO IL TEAM D'ÉLITE: messa a punto automatica, corse, carburante, miglioramenti \n- Decenni dopo, Jerry incontra un vecchio rivale. È una semplice coincidenza o il segno di qualcosa di più sinistro? (evento RETURN-Rev-Up) \n-Correzione di errori e ottimizzazioni \n\nControlla Linker per il download. Buone corse!",
+        "Meet the hub update 1.2.0! \nWhat's new: \n- NEW SECTION: SEASONS\n- NEW SECTION: PROFILE STYLE\n- WR: added driver profiles\n- AUTOSHOW: added direct link share\n- fix errors and optimization\n- other minor changes \n\nHappy racing!": "Scopri l'aggiornamento dell'hub 1.2.0!\nNovità:\n- NUOVA SEZIONE: STAGIONI\n- NUOVA SEZIONE: STILE PROFILO\n- Record Mondiali: aggiunti profili pilota\n- AUTOSHOW: aggiunta condivisione link diretto\n- Correzioni errori e ottimizzazioni\n- Altri cambiamenti minori\n\nBuone corse!",
         "Music clip": "Brano musicale",
         "Music volume": "Volume musica",
         "NEW": "NUOVO",
@@ -182,6 +182,34 @@
         "finished - {0} seconds": "completato - {0} secondi",
         "finishing release...": "completamento versione...",
         "text coming soon...": "testo in arrivo...",
-        "unpacking...": "estrazione..."
+        "unpacking...": "estrazione...",
+        "Ranking position: ": "Posizione in classifica: ",
+        "Total: ": "Totale: ",
+        " points": " punti",
+        " cars": " auto",
+        "Prize": "Premio",
+        "Prestige": "Prestigio",
+        "Hey, buddy. It was one of the earliest seasons of the game... There were no prize cars back then.": "Ehi, amico. Quelle erano alcune delle prime stagioni di gioco... All'epoca non c'erano auto premio.",
+        "Hello, sweetie. It was one of the earliest seasons of the game. There was no prize cup back then.": "Ciao, tesoro. Quella era una delle prime stagioni di gioco. All'epoca non esisteva la coppa premio.",
+        "BEST CAR": "MIGLIORE AUTO",
+        "SHARE THIS CAR:": "CONDIVIDI QUEST'AUTO:",
+        "DIRECT LINK": "LINK DIRETTO",
+        "IMAGE EXPORT": "ESPORTAZIONE IMMAGINE",
+        "CANCEL": "ANNULLA",
+        "PROFILE STYLES VIEWER": "VISUALIZZATORE STILI PROFILO",
+        "Only complete sets are displayed": "Vengono visualizzati solo set completi",
+        "SEASONS": "STAGIONI",
+        "PROFILE STYLE": "STILE PROFILO",
+        "Here you can see the key cars of each season": "Qui puoi vedere le auto chiave di ogni stagione",
+        "These are the prize cars of the current season of the crew championship": "Queste sono le auto premio della stagione corrente del campionato crew",
+        "But that's not all, click here": "Ma non è tutto, clicca qui",
+        "These cars will be used in the current season's Prestige Cup, isn't that great?": "Queste auto verranno utilizzate nella Prestige Cup della stagione corrente, non è fantastico?",
+        "You can also check other seasons, let's watch the previous one": "Puoi anche controllare altre stagioni, diamo un'occhiata alla precedente",
+        "To quickly return to the current season at any time, simply click on the crew emblem": "Per tornare rapidamente alla stagione corrente in qualsiasi momento, basta cliccare sull'emblema della crew",
+        "And of course, you can go straight to the AUTOSHOW by clicking on the car!": "E naturalmente, puoi andare direttamente all'AUTOSHOW cliccando sull'auto!",
+        "MILESTONE": "TRAGUARDO",
+        "Finally we can see the key cars of each season. Come with me, I'll show you!": "Finalmente possiamo vedere le auto chiave di ogni stagione. Vieni con me, ti mostro!",
+        "Jess Discord Bot": "Bot Discord Jess",
+        "Did you know I have a Discord bot? I joined Discord at TheMaintainers' request. Use the additional features and quick access to information when you can't use the hub.": "Sapevi che ho un bot Discord? Mi sono unita a Discord su richiesta di TheMaintainers. Usa le funzionalità aggiuntive e l'accesso rapido alle informazioni quando non puoi usare l'hub."
     }
 }
