--- a/Localisation/JA.json
+++ b/Localisation/JA.json
@@ -99,8 +99,8 @@
         "Let's make the app even cooler together!": "一緒にアプリをもっとクールにしましょう！",
         "MILESTONE SEASON CAR": "マイルストーンシーズンカー",
         "Main campaigns": "メインキャンペーン",
-        "Meet the CSR2 update 6.0.1! \n\nWhat's new: \n- THE ELITE DREAM TEAM IS HERE: automatic tuning, racing, fuel, improvements \n- Decades later, Jerry encounters an old rival. Is it a simple coincidence or a sign of something more sinister? (RETURN-Rev-Up event) \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "CSR2アップデート6.0.1のご紹介！ \n\n新機能： \n- エリートドリームチームが登場：自動チューニング、レーシング、燃料、改善 \n- 数十年後、ジェリーは古いライバルと出会う。それは単なる偶然か、それともより不気味な何かの兆候なのか？（RETURN-Rev-Upイベント） \n-エラーの修正と最適化 \n\nダウンロードはリンカーで確認してください。Happy racing!",
-        "Meet the hub update 1.1.5! \nWhat's new: \n- DONATE: enabled and top-donates added\n- AUTOSHOW: added fast snap-full export\n- gitbox-mini: updated visual special for gacha imports\n- added special hyperlink to our email\n- fix errors and optimization \n\nHappy racing!": "ハブアップデート1.1.5が登場！\n新機能：\n- 寄付：有効化され、寄付額トップが追加されました\n- オートショー：高速スナップフルエクスポートを追加\n- gitbox-mini：ガチャインポート用のビジュアルスペシャルを更新\n- メールへの特別ハイパーリンクを追加\n- エラーの修正と最適化\n\n Happy racing!",
+        "Meet the CSR2 update 6.0! \n\nWhat's new: \n- THE ELITE DREAM TEAM IS HERE: automatic tuning, racing, fuel, improvements \n- Decades later, Jerry encounters an old rival. Is it a simple coincidence or a sign of something more sinister? (RETURN-Rev-Up event) \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "CSR2アップデート6.0のご紹介！ \n\n新機能： \n- エリートドリームチームが登場：自動チューニング、レーシング、燃料、改善 \n- 数十年後、ジェリーは古いライバルと出会う。それは単なる偶然か、それともより不気味な何かの兆候なのか？（RETURN-Rev-Upイベント） \n-エラーの修正と最適化 \n\nダウンロードはリンカーで確認してください。Happy racing!",
+        "Meet the hub update 1.2.0! \nWhat's new: \n- NEW SECTION: SEASONS\n- NEW SECTION: PROFILE STYLE\n- WR: added driver profiles\n- AUTOSHOW: added direct link share\n- fix errors and optimization\n- other minor changes \n\nHappy racing!": "Hubアップデート1.2.0のご紹介！\n新機能：\n- 新セクション：シーズン\n- 新セクション：プロファイルスタイル\n- ワールドレコード：ドライバープロファイルを追加\n- オートショー：直接リンク共有を追加\n- エラーの修正と最適化\n- その他の軽微な変更\n\nHappy racing!",
         "Music clip": "音楽クリップ",
         "Music volume": "音楽音量",
         "NEW": "新着",
@@ -182,6 +182,34 @@
         "finished - {0} seconds": "完了 - {0} 秒",
         "finishing release...": "リリースを終了中...",
         "text coming soon...": "近日公開...",
-        "unpacking...": "解凍中..."
+        "unpacking...": "解凍中...",
+        "Ranking position: ": "ランキング順位: ",
+        "Total: ": "合計: ",
+        " points": " ポイント",
+        " cars": " 台",
+        "Prize": "報酬",
+        "Prestige": "プレステージ",
+        "Hey, buddy. It was one of the earliest seasons of the game... There were no prize cars back then.": "親愛なる友よ。これはゲームの最初期のシーズンだった...あの頃は報酬の車はなかったのだ。",
+        "Hello, sweetie. It was one of the earliest seasons of the game. There was no prize cup back then.": "こんにちは、愛しい人よ。これはゲームの最初期のシーズンだった。あの頃は報酬のカップはなかったの。",
+        "BEST CAR": "ベストカー",
+        "SHARE THIS CAR:": "この車をシェア:",
+        "DIRECT LINK": "直接リンク",
+        "IMAGE EXPORT": "画像エクスポート",
+        "CANCEL": "キャンセル",
+        "PROFILE STYLES VIEWER": "プロファイルスタイルビューア",
+        "Only complete sets are displayed": "完成したセットのみ表示されます",
+        "SEASONS": "シーズン",
+        "PROFILE STYLE": "プロファイルスタイル",
+        "Here you can see the key cars of each season": "ここでは各シーズンのキーカーを見ることができます",
+        "These are the prize cars of the current season of the crew championship": "これらは現在のクルーチャンピオンシップシーズンの報酬車です",
+        "But that's not all, click here": "しかしそれだけではありません、ここをクリック",
+        "These cars will be used in the current season's Prestige Cup, isn't that great?": "これらの車は現在のシーズンのプレステージカップで使用されます、素晴らしいでしょう？",
+        "You can also check other seasons, let's watch the previous one": "他のシーズンも確認できます、前のシーズンを見てみましょう",
+        "To quickly return to the current season at any time, simply click on the crew emblem": "いつでも現在のシーズンに素早く戻るには、クルーのエンブレムをクリックするだけです",
+        "And of course, you can go straight to the AUTOSHOW by clicking on the car!": "そしてもちろん、車をクリックするだけでオートショーに直接アクセスできます！",
+        "MILESTONE": "マイルストーン",
+        "Finally we can see the key cars of each season. Come with me, I'll show you!": "ついに各シーズンのキーカーを見られるようになりました。私についてきて、お見せします！",
+        "Jess Discord Bot": "Jess Discordボット",
+        "Did you know I have a Discord bot? I joined Discord at TheMaintainers' request. Use the additional features and quick access to information when you can't use the hub.": "私にDiscordボットがあるのをご存知ですか？TheMaintainersの要請でDiscordに参加しました。ハブが使えないときは、追加機能と情報へのクイックアクセスをご利用ください。"
     }
 }
