--- a/Localisation/KO.json
+++ b/Localisation/KO.json
@@ -99,8 +99,8 @@
         "Let's make the app even cooler together!": "함께 앱을 더욱 멋지게 만들어 봅시다!",
         "MILESTONE SEASON CAR": "마일스톤 시즌 자동차",
         "Main campaigns": "주요 캠페인",
-        "Meet the CSR2 update 6.0.1! \n\nWhat's new: \n- THE ELITE DREAM TEAM IS HERE: automatic tuning, racing, fuel, improvements \n- Decades later, Jerry encounters an old rival. Is it a simple coincidence or a sign of something more sinister? (RETURN-Rev-Up event) \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "CSR2 업데이트 6.0.1을 소개합니다! \n\n새로운 기능: \n- 엘리트 드림 팀 등장: 자동 튜닝, 레이싱, 연료, 개선 사항 \n- 수십 년 후, Jerry는 오랜 라이벌과 마주칩니다. 단순한 우연일까, 아니면 더 불길한 무언가의 신호일까? (RETURN-Rev-Up 이벤트) \n-오류 수정 및 최적화 \n\n다운로드는 Linker에서 확인하세요. Happy racing!",
-        "Meet the hub update 1.1.5! \nWhat's new: \n- DONATE: enabled and top-donates added\n- AUTOSHOW: added fast snap-full export\n- gitbox-mini: updated visual special for gacha imports\n- added special hyperlink to our email\n- fix errors and optimization \n\nHappy racing!": "허브 업데이트 1.1.5를 만나보세요!\n새로운 기능:\n- 기부: 사용 가능 및 최고 기부금 추가\n- 오토쇼: 빠른 스냅-풀 내보내기 추가\n- gitbox-mini: 가챠 임포트용 시각적 스페셜 효과 업데이트\n- 이메일로의 특수 하이퍼링크 추가\n- 오류 수정 및 최적화\n\nHappy racing!",
+        "Meet the CSR2 update 6.0! \n\nWhat's new: \n- THE ELITE DREAM TEAM IS HERE: automatic tuning, racing, fuel, improvements \n- Decades later, Jerry encounters an old rival. Is it a simple coincidence or a sign of something more sinister? (RETURN-Rev-Up event) \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "CSR2 업데이트 6.0을 소개합니다! \n\n새로운 기능: \n- 엘리트 드림 팀 등장: 자동 튜닝, 레이싱, 연료, 개선 사항 \n- 수십 년 후, Jerry는 오랜 라이벌과 마주칩니다. 단순한 우연일까, 아니면 더 불길한 무언가의 신호일까? (RETURN-Rev-Up 이벤트) \n-오류 수정 및 최적화 \n\n다운로드는 Linker에서 확인하세요. Happy racing!",
+        "Meet the hub update 1.2.0! \nWhat's new: \n- NEW SECTION: SEASONS\n- NEW SECTION: PROFILE STYLE\n- WR: added driver profiles\n- AUTOSHOW: added direct link share\n- fix errors and optimization\n- other minor changes \n\nHappy racing!": "허브 업데이트 1.2.0을 소개합니다!\n새로운 기능:\n- 새로운 섹션: 시즌\n- 새로운 섹션: 프로필 스타일\n- 세계 기록: 드라이버 프로필 추가\n- 오토쇼: 직접 링크 공유 추가\n- 오류 수정 및 최적화\n- 기타 사소한 변경 사항\n\nHappy racing!",
         "Music clip": "음악 클립",
         "Music volume": "음악 볼륨",
         "NEW": "새로운 자동차",
@@ -182,6 +182,34 @@
         "finished - {0} seconds": "완료됨 - {0}초",
         "finishing release...": "릴리스 마무리 중...",
         "text coming soon...": "텍스트 업데이트 예정...",
-        "unpacking...": "압축 해제 중..."
+        "unpacking...": "압축 해제 중...",
+        "Ranking position: ": "랭킹 순위: ",
+        "Total: ": "총계: ",
+        " points": " 포인트",
+        " cars": " 대",
+        "Prize": "상품",
+        "Prestige": "프레스티지",
+        "Hey, buddy. It was one of the earliest seasons of the game... There were no prize cars back then.": "안녕, 친구. 그건 게임의 가장 초기 시즌 중 하나였어... 그땐 상품 자동차가 없었지.",
+        "Hello, sweetie. It was one of the earliest seasons of the game. There was no prize cup back then.": "안녕, 자기. 그건 게임의 가장 초기 시즌 중 하나였어. 그땐 프리즈 컵이 없었단다.",
+        "BEST CAR": "최고의 차량",
+        "SHARE THIS CAR:": "이 차량 공유:",
+        "DIRECT LINK": "직접 링크",
+        "IMAGE EXPORT": "이미지 내보내기",
+        "CANCEL": "취소",
+        "PROFILE STYLES VIEWER": "프로필 스타일 뷰어",
+        "Only complete sets are displayed": "완전한 세트만 표시됩니다",
+        "SEASONS": "시즌",
+        "PROFILE STYLE": "프로필 스타일",
+        "Here you can see the key cars of each season": "여기에서 각 시즌의 주요 차량을 볼 수 있습니다",
+        "These are the prize cars of the current season of the crew championship": "이것들은 현재 크루 챔피언십 시즌의 상품 차량입니다",
+        "But that's not all, click here": "그게 다가 아닙니다, 여기를 클릭하세요",
+        "These cars will be used in the current season's Prestige Cup, isn't that great?": "이 차량들은 현재 시즌의 프레스티지 컵에서 사용될 거야, 정말 대단하지 않아?",
+        "You can also check other seasons, let's watch the previous one": "다른 시즌도 확인할 수 있습니다, 이전 시즌을 살펴보세요",
+        "To quickly return to the current season at any time, simply click on the crew emblem": "언제든지 현재 시즌으로 빠르게 돌아가려면 크루 엠블럼을 클릭하기만 하면 됩니다",
+        "And of course, you can go straight to the AUTOSHOW by clicking on the car!": "그리고 물론, 차량을 클릭하면 바로 오토쇼로 이동할 수 있습니다!",
+        "MILESTONE": "중요 단계",
+        "Finally we can see the key cars of each season. Come with me, I'll show you!": "드디어 각 시즌의 주요 차량을 볼 수 있게 되었어요. 따라오세요, 제가 보여드릴게요!",
+        "Jess Discord Bot": "Jess 디스코드 봇",
+        "Did you know I have a Discord bot? I joined Discord at TheMaintainers' request. Use the additional features and quick access to information when you can't use the hub.": "제가 디스코드 봇을 가지고 있다는 것 알고 계셨나요? TheMaintainers의 요청으로 디스코드에 참여했어요. 허브를 사용할 수 없을 때 추가 기능과 빠른 정보 접근을 활용하세요."
     }
 }
