--- a/Localisation/PL.json
+++ b/Localisation/PL.json
@@ -99,8 +99,8 @@
         "Let's make the app even cooler together!": "Sprawmy razem, aby aplikacja była jeszcze lepsza!",
         "MILESTONE SEASON CAR": "SAMOCHÓD SEZONU MILESTONE",
         "Main campaigns": "Kampanie główne",
-        "Meet the CSR2 update 6.0.1! \n\nWhat's new: \n- THE ELITE DREAM TEAM IS HERE: automatic tuning, racing, fuel, improvements \n- Decades later, Jerry encounters an old rival. Is it a simple coincidence or a sign of something more sinister? (RETURN-Rev-Up event) \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "Poznaj aktualizację CSR2 6.0.1! \n\nNowości: \n- JEST ELITARNA DRUŻYNA MARZEŃ: automatyczne tuningowanie, wyścigi, paliwo, ulepszenia \n- Dekady później Jerry spotyka starego rywala. Czy to zwykły zbieg okoliczności, czy znak czegoś bardziej złowieszczego? (Wydarzenie RETURN-Rev-Up) \n-Usuwanie błędów и оптимизация \n\nSprawdź Linker, aby pobrać. Happy racing!",
-        "Meet the hub update 1.1.5! \nWhat's new: \n- DONATE: enabled and top-donates added\n- AUTOSHOW: added fast snap-full export\n- gitbox-mini: updated visual special for gacha imports\n- added special hyperlink to our email\n- fix errors and optimization \n\nHappy racing!": "Poznaj aktualizację centrum 1.1.5! \nNowości: \n- DOTACJE: włączone i dodane najwyższe darowizny\n- AUTOSHOW: dodano szybki eksport snap-full\n- gitbox-mini: zaktualizowano efekty wizualne dla importów gacha\n- dodano specjalny hiperlink do naszego emaila\n- naprawiono błędy i optymalizacja \n\nHappy racing!",
+        "Meet the CSR2 update 6.0! \n\nWhat's new: \n- THE ELITE DREAM TEAM IS HERE: automatic tuning, racing, fuel, improvements \n- Decades later, Jerry encounters an old rival. Is it a simple coincidence or a sign of something more sinister? (RETURN-Rev-Up event) \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "Poznaj aktualizację CSR2 6.0! \n\nNowości: \n- JEST ELITARNA DRUŻYNA MARZEŃ: automatyczne tuningowanie, wyścigi, paliwo, ulepszenia \n- Dekady później Jerry spotyka starego rywala. Czy to zwykły zbieg okoliczności, czy znak czegoś bardziej złowieszczego? (Wydarzenie RETURN-Rev-Up) \n-Usuwanie błędów и оптимизация \n\nSprawdź Linker, aby pobrać. Happy racing!",
+        "Meet the hub update 1.2.0! \nWhat's new: \n- NEW SECTION: SEASONS\n- NEW SECTION: PROFILE STYLE\n- WR: added driver profiles\n- AUTOSHOW: added direct link share\n- fix errors and optimization\n- other minor changes \n\nHappy racing!": "Poznaj aktualizację centrum 1.2.0!\nCo nowego:\n- NOWA SEKCJA: SEZONY\n- NOWA SEKCJA: STYL PROFILU\n- Rekordy Świata: dodano profile kierowców\n- AUTOSALON: dodano udostępnianie bezpośredniego linku\n- Naprawa błędów i optymalizacja\n- Inne drobne zmiany\n\nHappy racing!",
         "Music clip": "Klip muzyczny",
         "Music volume": "Głośność muzyki",
         "NEW": "NOWOŚĆ",
@@ -182,6 +182,34 @@
         "finished - {0} seconds": "zakończono - {0} sekund",
         "finishing release...": "kończenie wydania...",
         "text coming soon...": "wkrótce więcej informacji...",
-        "unpacking...": "wypakowywanie..."
+        "unpacking...": "wypakowywanie...",
+        "Ranking position: ": "Pozycja w rankingu: ",
+        "Total: ": "Łącznie: ",
+        " points": " punktów",
+        " cars": " samochodów",
+        "Prize": "Nagroda",
+        "Prestige": "Prestiż",
+        "Hey, buddy. It was one of the earliest seasons of the game... There were no prize cars back then.": "Hej, przyjacielu. To był jeden z najwcześniejszych sezonów gry... Wtedy nie było samochodów nagród.",
+        "Hello, sweetie. It was one of the earliest seasons of the game. There was no prize cup back then.": "Witaj, kochanie. To był jeden z najwcześniejszych sezonów gry. Wtedy nie było pucharu nagród.",
+        "BEST CAR": "NAJLEPSZY SAMOCHÓD",
+        "SHARE THIS CAR:": "UDOSTĘPNIJ TEN SAMOCHÓD:",
+        "DIRECT LINK": "BEZPOŚREDNI LINK",
+        "IMAGE EXPORT": "EKSPORT OBRAZU",
+        "CANCEL": "ANULUJ",
+        "PROFILE STYLES VIEWER": "PRZEGLĄDARKA STYLÓW PROFILU",
+        "Only complete sets are displayed": "Wyświetlane są tylko kompletne zestawy",
+        "SEASONS": "SEZONY",
+        "PROFILE STYLE": "STYL PROFILU",
+        "Here you can see the key cars of each season": "Tutaj możesz zobaczyć kluczowe samochody każdego sezonu",
+        "These are the prize cars of the current season of the crew championship": "To są samochody nagrody obecnego sezonu mistrzostw załogi",
+        "But that's not all, click here": "Ale to nie wszystko, kliknij tutaj",
+        "These cars will be used in the current season's Prestige Cup, isn't that great?": "Te samochody będą używane w Pucharze Prestiżu obecnego sezonu, czy to nie wspaniałe?",
+        "You can also check other seasons, let's watch the previous one": "Możesz również sprawdzić inne sezony, spójrzmy na poprzedni",
+        "To quickly return to the current season at any time, simply click on the crew emblem": "Aby szybko wrócić do bieżącego sezonu w dowolnym momencie, po prostu kliknij emblem załogi",
+        "And of course, you can go straight to the AUTOSHOW by clicking on the car!": "I oczywiście, możesz przejść bezpośrednio do AUTOSHOW klikając na samochód!",
+        "MILESTONE": "KAMIEŃ MILOWY",
+        "Finally we can see the key cars of each season. Come with me, I'll show you!": "Wreszcie możemy zobaczyć kluczowe samochody każdego sezonu. Chodź ze mną, pokażę ci!",
+        "Jess Discord Bot": "Jess Discord Bot",
+        "Did you know I have a Discord bot? I joined Discord at TheMaintainers' request. Use the additional features and quick access to information when you can't use the hub.": "Czy wiedziałeś, że mam bota na Discordzie? Dołączyłam do Discorda na prośbę TheMaintainers. Używaj dodatkowych funkcji i szybkiego dostępu do informacji, gdy nie możesz użyć huba."
     }
 }
