--- a/Localisation/ZH-TW.json
+++ b/Localisation/ZH-TW.json
@@ -99,8 +99,8 @@
         "Let's make the app even cooler together!": "讓我們攜手讓應用程式變得更出色！",
         "MILESTONE SEASON CAR": "賽季里程碑車輛",
         "Main campaigns": "主要眾籌活動",
-        "Meet the CSR2 update 6.0.1! \n\nWhat's new: \n- THE ELITE DREAM TEAM IS HERE: automatic tuning, racing, fuel, improvements \n- Decades later, Jerry encounters an old rival. Is it a simple coincidence or a sign of something more sinister? (RETURN-Rev-Up event) \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "歡迎了解CSR2 6.0.1版本更新！ \n\n新內容： \n- 精英夢之隊登場：自動調校、賽車、燃油、改進 \n- 幾十年後，Jerry遇到了一位老對手。這僅僅是巧合，還是更 sinister 事情的徵兆？（回歸-加速活動） \n-錯誤修復和優化 \n\n請查看Linker以下載。祝您競速愉快!",
-        "Meet the hub update 1.1.5! \nWhat's new: \n- DONATE: enabled and top-donates added\n- AUTOSHOW: added fast snap-full export\n- gitbox-mini: updated visual special for gacha imports\n- added special hyperlink to our email\n- fix errors and optimization \n\nHappy racing!": "遇見中心更新1.1.5！\n新功能：\n- 捐贈：已啟用並添加了頂級捐贈\n- 自動展示：添加了快速snap-full導出\n- gitbox-mini：更新了用於gacha導入的視覺特效\n- 添加了指向我們郵箱的特殊超鏈接\n- 錯誤修復和優化\n\n競速快樂！",
+        "Meet the CSR2 update 6.0! \n\nWhat's new: \n- THE ELITE DREAM TEAM IS HERE: automatic tuning, racing, fuel, improvements \n- Decades later, Jerry encounters an old rival. Is it a simple coincidence or a sign of something more sinister? (RETURN-Rev-Up event) \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "歡迎了解CSR2 6.0版本更新！ \n\n新內容： \n- 精英夢之隊登場：自動調校、賽車、燃油、改進 \n- 幾十年後，Jerry遇到了一位老對手。這僅僅是巧合，還是更 sinister 事情的徵兆？（回歸-加速活動） \n-錯誤修復和優化 \n\n請查看Linker以下載。祝您競速愉快!",
+        "Meet the hub update 1.2.0! \nWhat's new: \n- NEW SECTION: SEASONS\n- NEW SECTION: PROFILE STYLE\n- WR: added driver profiles\n- AUTOSHOW: added direct link share\n- fix errors and optimization\n- other minor changes \n\nHappy racing!": "迎來中心更新 1.2.0！\n新內容：\n- 新區塊：賽季\n- 新區塊：個人檔案風格\n- 世界紀錄：新增車手檔案\n- 車展：新增直接連結分享\n- 錯誤修正和優化\n- 其他細微變動\n\n祝競速愉快！",
         "Music clip": "音樂曲子",
         "Music volume": "音樂聲量",
         "NEW": "新",
@@ -182,6 +182,34 @@
         "finished - {0} seconds": "完成 - {0} 秒",
         "finishing release...": "完成版本發布中...",
         "text coming soon...": "即將來臨...",
-        "unpacking...": "解壓縮中..."
+        "unpacking...": "解壓縮中...",
+        "Ranking position: ": "排名位置: ",
+        "Total: ": "總計: ",
+        " points": " 積分",
+        " cars": " 輛車",
+        "Prize": "獎勵",
+        "Prestige": "聲望",
+        "Hey, buddy. It was one of the earliest seasons of the game... There were no prize cars back then.": "嘿，老友。那是遊戲最早的賽季之一...那時候還沒有獎勵車輛。",
+        "Hello, sweetie. It was one of the earliest seasons of the game. There was no prize cup back then.": "你好，親愛的。那是遊戲最早的賽季之一。那時候還沒有獎勵盃賽。",
+        "BEST CAR": "最佳車輛",
+        "SHARE THIS CAR:": "分享這輛車:",
+        "DIRECT LINK": "直接連結",
+        "IMAGE EXPORT": "圖片匯出",
+        "CANCEL": "取消",
+        "PROFILE STYLES VIEWER": "個人檔案樣式檢視器",
+        "Only complete sets are displayed": "僅顯示完整套裝",
+        "SEASONS": "賽季",
+        "PROFILE STYLE": "個人檔案樣式",
+        "Here you can see the key cars of each season": "在這裡你可以看到每個賽季的關鍵車輛",
+        "These are the prize cars of the current season of the crew championship": "這些是當前車隊冠軍賽賽季的獎勵車輛",
+        "But that's not all, click here": "但還不止這些，點擊這裡",
+        "These cars will be used in the current season's Prestige Cup, isn't that great?": "這些車輛將在當前賽季的聲望盃賽中使用，是不是很棒？",
+        "You can also check other seasons, let's watch the previous one": "你也可以查看其他賽季，讓我們看看上一個賽季",
+        "To quickly return to the current season at any time, simply click on the crew emblem": "要隨時快速返回當前賽季，只需點擊車隊徽章",
+        "And of course, you can go straight to the AUTOSHOW by clicking on the car!": "當然，你可以透過點擊車輛直接進入車展！",
+        "MILESTONE": "里程碑",
+        "Finally we can see the key cars of each season. Come with me, I'll show you!": "終於我們可以查看每個賽季的關鍵車輛了。跟我來，我帶你看看！",
+        "Jess Discord Bot": "Jess Discord 機器人",
+        "Did you know I have a Discord bot? I joined Discord at TheMaintainers' request. Use the additional features and quick access to information when you can't use the hub.": "你知道我有一個 Discord 機器人嗎？我應 TheMaintainers 的請求加入了 Discord。當你無法使用中心時，可以使用這些額外功能和快速資訊存取。"
     }
 }
