--- a/Localisation/ZH.json
+++ b/Localisation/ZH.json
@@ -99,8 +99,8 @@
         "Let's make the app even cooler together!": "让我们携手让应用程序变得更棒！",
         "MILESTONE SEASON CAR": "赛季里程碑车辆",
         "Main campaigns": "主要众筹活动",
-        "Meet the CSR2 update 6.0.1! \n\nWhat's new: \n- THE ELITE DREAM TEAM IS HERE: automatic tuning, racing, fuel, improvements \n- Decades later, Jerry encounters an old rival. Is it a simple coincidence or a sign of something more sinister? (RETURN-Rev-Up event) \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "欢迎了解CSR2 6.0.1版本更新！ \n\n新内容： \n- 精英梦之队登场：自动调校、赛车、燃油、改进 \n- 几十年后，Jerry遇到了一位老对手。这仅仅是巧合，还是更 sinister 事情的征兆？（回归-加速活动） \n-错误修复和优化 \n\n请查看Linker以下载。祝您竞速愉快!",
-        "Meet the hub update 1.1.5! \nWhat's new: \n- DONATE: enabled and top-donates added\n- AUTOSHOW: added fast snap-full export\n- gitbox-mini: updated visual special for gacha imports\n- added special hyperlink to our email\n- fix errors and optimization \n\nHappy racing!": "遇见中心更新1.1.5！\n新功能：\n- 捐赠：已启用并添加了顶级捐赠\n- 自动展示：添加了快速snap-full导出\n- gitbox-mini：更新了用于gacha导入的视觉特效\n- 添加了指向我们邮箱的特殊超链接\n- 错误修复和优化\n\n竞速快乐！",
+        "Meet the CSR2 update 6.0! \n\nWhat's new: \n- THE ELITE DREAM TEAM IS HERE: automatic tuning, racing, fuel, improvements \n- Decades later, Jerry encounters an old rival. Is it a simple coincidence or a sign of something more sinister? (RETURN-Rev-Up event) \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "欢迎了解CSR2 6.0版本更新！ \n\n新内容： \n- 精英梦之队登场：自动调校、赛车、燃油、改进 \n- 几十年后，Jerry遇到了一位老对手。这仅仅是巧合，还是更 sinister 事情的征兆？（回归-加速活动） \n-错误修复和优化 \n\n请查看Linker以下载。祝您竞速愉快!",
+        "Meet the hub update 1.2.0! \nWhat's new: \n- NEW SECTION: SEASONS\n- NEW SECTION: PROFILE STYLE\n- WR: added driver profiles\n- AUTOSHOW: added direct link share\n- fix errors and optimization\n- other minor changes \n\nHappy racing!": "迎来的中心更新 1.2.0！\n新内容：\n- 新板块：赛季\n- 新板块：个人资料风格\n- 世界纪录：新增车手档案\n- 车展：新增直接链接分享\n- 错误修复和优化\n- 其他细微改动\n\n祝竞速愉快！",
         "Music clip": "音乐曲子",
         "Music volume": "音乐声量",
         "NEW": "新",
@@ -182,6 +182,34 @@
         "finished - {0} seconds": "完成 - {0} 秒",
         "finishing release...": "正在完成版本发布...",
         "text coming soon...": "即将来临...",
-        "unpacking...": "解压中..."
+        "unpacking...": "解压中...",
+        "Ranking position: ": "排名位置: ",
+        "Total: ": "总计: ",
+        " points": " 积分",
+        " cars": " 辆汽车",
+        "Prize": "奖励",
+        "Prestige": "声望",
+        "Hey, buddy. It was one of the earliest seasons of the game... There were no prize cars back then.": "嘿，伙计。那是游戏最早的赛季之一...那时候还没有奖励车辆。",
+        "Hello, sweetie. It was one of the earliest seasons of the game. There was no prize cup back then.": "你好，亲爱的。那是游戏最早的赛季之一。那时候还没有奖励杯赛。",
+        "BEST CAR": "最佳车辆",
+        "SHARE THIS CAR:": "分享这辆车:",
+        "DIRECT LINK": "直接链接",
+        "IMAGE EXPORT": "图片导出",
+        "CANCEL": "取消",
+        "PROFILE STYLES VIEWER": "个人资料样式查看器",
+        "Only complete sets are displayed": "仅显示完整套装",
+        "SEASONS": "赛季",
+        "PROFILE STYLE": "个人资料样式",
+        "Here you can see the key cars of each season": "在这里你可以看到每个赛季的关键车辆",
+        "These are the prize cars of the current season of the crew championship": "这些是当前车队冠军赛赛季的奖励车辆",
+        "But that's not all, click here": "但还不止这些，点击这里",
+        "These cars will be used in the current season's Prestige Cup, isn't that great?": "这些车辆将在当前赛季的声望杯中使用，是不是很棒？",
+        "You can also check other seasons, let's watch the previous one": "你也可以查看其他赛季，让我们看看上一个赛季",
+        "To quickly return to the current season at any time, simply click on the crew emblem": "要随时快速返回当前赛季，只需点击车队徽章",
+        "And of course, you can go straight to the AUTOSHOW by clicking on the car!": "当然，你可以通过点击车辆直接进入车展！",
+        "MILESTONE": "里程碑",
+        "Finally we can see the key cars of each season. Come with me, I'll show you!": "终于我们可以查看每个赛季的关键车辆了。跟我来，我带你看看！",
+        "Jess Discord Bot": "Jess Discord 机器人",
+        "Did you know I have a Discord bot? I joined Discord at TheMaintainers' request. Use the additional features and quick access to information when you can't use the hub.": "你知道我有一个 Discord 机器人吗？我应 TheMaintainers 的请求加入了 Discord。当你无法使用中心时，可以使用这些额外功能和快速信息访问。"
     }
 }
