--- a/Localisation/ES.json
+++ b/Localisation/ES.json
@@ -99,8 +99,8 @@
         "Let's make the app even cooler together!": "¡Hagamos que la aplicación sea aún más genial juntos!",
         "MILESTONE SEASON CAR": "AUTO DE TEMPORADA",
         "Main campaigns": "Campañas principales",
-        "Meet the CSR2 update 6.0.1! \n\nWhat's new: \n- THE ELITE DREAM TEAM IS HERE: automatic tuning, racing, fuel, improvements \n- Decades later, Jerry encounters an old rival. Is it a simple coincidence or a sign of something more sinister? (RETURN-Rev-Up event) \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "¡Conoce la actualización 6.0.1 de CSR2! \n\nNovedades: \n- EL EQUIPO DE ENSUEÑO DE ÉLITE ESTÁ AQUÍ: afinado automático, carreras, combustible, mejoras \n- Décadas después, Jerry se encuentra con un viejo rival. ¿Es una simple coincidencia o una señal de algo más siniestro? (evento RETURN-Rev-Up) \n-Corrección de errores y optimización \n\nConsulta Linker para descargar. ¡Felices carreras!",
-        "Meet the hub update 1.1.5! \nWhat's new: \n- DONATE: enabled and top-donates added\n- AUTOSHOW: added fast snap-full export\n- gitbox-mini: updated visual special for gacha imports\n- added special hyperlink to our email\n- fix errors and optimization \n\nHappy racing!": "¡Conoce la actualización del hub 1.1.5! \nNovedades: \n- DONAR: activado y se añadieron las principales donaciones\n- AUTOSHOW: añadida exportación rápida snap-full\n- gitbox-mini: actualizado el efecto visual especial para importaciones gacha\n- añadido enlace hiperespecial a nuestro correo electrónico\n- corrección de errores y optimización \n\n¡Felices carreras!",
+        "Meet the CSR2 update 6.0! \n\nWhat's new: \n- THE ELITE DREAM TEAM IS HERE: automatic tuning, racing, fuel, improvements \n- Decades later, Jerry encounters an old rival. Is it a simple coincidence or a sign of something more sinister? (RETURN-Rev-Up event) \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "¡Conoce la actualización 6.0 de CSR2! \n\nNovedades: \n- EL EQUIPO DE ENSUEÑO DE ÉLITE ESTÁ AQUÍ: afinado automático, carreras, combustible, mejoras \n- Décadas después, Jerry se encuentra con un viejo rival. ¿Es una simple coincidencia o una señal de algo más siniestro? (evento RETURN-Rev-Up) \n-Corrección de errores y optimización \n\nConsulta Linker para descargar. ¡Felices carreras!",
+        "Meet the hub update 1.2.0! \nWhat's new: \n- NEW SECTION: SEASONS\n- NEW SECTION: PROFILE STYLE\n- WR: added driver profiles\n- AUTOSHOW: added direct link share\n- fix errors and optimization\n- other minor changes \n\nHappy racing!": "¡Conoce la actualización del hub 1.2.0!\nNovedades:\n- NUEVA SECCIÓN: TEMPORADAS\n- NUEVA SECCIÓN: ESTILO DE PERFIL\n- Récords Mundiales: añadimos perfiles de pilotos\n- AUTOSHOW: añadimos compartir enlace directo\n- Corrección de errores y optimización\n- Otros cambios menores\n\n¡Felices carreras!",
         "Music clip": "Musica",
         "Music volume": "Volumen",
         "NEW": "NUEVO",
@@ -182,6 +182,34 @@
         "finished - {0} seconds": "terminado - {0} segundos",
         "finishing release...": "finalizando lanzamiento...",
         "text coming soon...": "texto próximamente...",
-        "unpacking...": "descomprimiendo..."
+        "unpacking...": "descomprimiendo...",
+        "Ranking position: ": "Posición en el ranking: ",
+        "Total: ": "Total: ",
+        " points": " puntos",
+        " cars": " coches",
+        "Prize": "Premio",
+        "Prestige": "Prestigio",
+        "Hey, buddy. It was one of the earliest seasons of the game... There were no prize cars back then.": "Oye, amigo. Esa fue una de las primeras temporadas del juego... No había coches premio en aquel entonces.",
+        "Hello, sweetie. It was one of the earliest seasons of the game. There was no prize cup back then.": "Hola, cariño. Esa fue una de las primeras temporadas del juego. No había copa de premios en aquel entonces.",
+        "BEST CAR": "MEJOR COCHE",
+        "SHARE THIS CAR:": "COMPARTIR ESTE COCHE:",
+        "DIRECT LINK": "ENLACE DIRECTO",
+        "IMAGE EXPORT": "EXPORTAR IMAGEN",
+        "CANCEL": "CANCELAR",
+        "PROFILE STYLES VIEWER": "VISOR DE ESTILOS DE PERFIL",
+        "Only complete sets are displayed": "Solo se muestran conjuntos completos",
+        "SEASONS": "TEMPORADAS",
+        "PROFILE STYLE": "ESTILO DE PERFIL",
+        "Here you can see the key cars of each season": "Aquí puedes ver los coches clave de cada temporada",
+        "These are the prize cars of the current season of the crew championship": "Estos son los coches premio de la temporada actual del campeonato de crew",
+        "But that's not all, click here": "Pero eso no es todo, haz clic aquí",
+        "These cars will be used in the current season's Prestige Cup, isn't that great?": "Estos coches se usarán en la Prestige Cup de la temporada actual, ¿no es genial?",
+        "You can also check other seasons, let's watch the previous one": "También puedes ver otras temporadas, veamos la anterior",
+        "To quickly return to the current season at any time, simply click on the crew emblem": "Para volver rápidamente a la temporada actual en cualquier momento, simplemente haz clic en el emblema del crew",
+        "And of course, you can go straight to the AUTOSHOW by clicking on the car!": "¡Y por supuesto, puedes ir directamente al AUTOSHOW haciendo clic en el coche!",
+        "MILESTONE": "HITO",
+        "Finally we can see the key cars of each season. Come with me, I'll show you!": "Por fin podemos ver los coches clave de cada temporada. ¡Ven conmigo, te lo mostraré!",
+        "Jess Discord Bot": "Bot de Jess para Discord",
+        "Did you know I have a Discord bot? I joined Discord at TheMaintainers' request. Use the additional features and quick access to information when you can't use the hub.": "¿Sabías que tengo un bot de Discord? Me uní a Discord por petición de TheMaintainers. Usa las funciones adicionales y el acceso rápido a la información cuando no puedas usar el hub."
     }
 }
