--- a/Localisation/FR.json
+++ b/Localisation/FR.json
@@ -99,8 +99,8 @@
         "Let's make the app even cooler together!": "Rendons l'application encore plus géniale ensemble !",
         "MILESTONE SEASON CAR": "VOITURE PHARE DE LA SAISON",
         "Main campaigns": "Campagnes principales",
-        "Meet the CSR2 update 6.0.1! \n\nWhat's new: \n- THE ELITE DREAM TEAM IS HERE: automatic tuning, racing, fuel, improvements \n- Decades later, Jerry encounters an old rival. Is it a simple coincidence or a sign of something more sinister? (RETURN-Rev-Up event) \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "Découvrez la mise à jour 6.0.1 de CSR2 ! \n\nNouveautés : \n- L'ÉQUIPE DE RÊVE D'ÉLITE EST LÀ : réglage automatique, course, carburant, améliorations \n- Des décennies plus tard, Jerry rencontre un vieux rival. Est-ce une simple coïncidence ou le signe de quelque chose de plus sinistre ? (événement RETURN-Rev-Up) \n-Correction d'erreurs et optimisation \n\nConsultez Linker pour télécharger. Bonne course !",
-        "Meet the hub update 1.1.5! \nWhat's new: \n- DONATE: enabled and top-donates added\n- AUTOSHOW: added fast snap-full export\n- gitbox-mini: updated visual special for gacha imports\n- added special hyperlink to our email\n- fix errors and optimization \n\nHappy racing!": "Découvrez la mise à jour du hub 1.1.5 ! \nNouveautés : \n- DON : activé et ajout des meilleurs dons\n- AUTOSHOW : ajout de l'exportation rapide snap-full\n- gitbox-mini : mise à jour des effets visuels spéciaux pour les imports gacha\n- ajout d'un hyperlien spécial vers notre email\n- correction des erreurs et optimisation \n\nBonnes courses !",
+        "Meet the CSR2 update 6.0! \n\nWhat's new: \n- THE ELITE DREAM TEAM IS HERE: automatic tuning, racing, fuel, improvements \n- Decades later, Jerry encounters an old rival. Is it a simple coincidence or a sign of something more sinister? (RETURN-Rev-Up event) \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "Découvrez la mise à jour 6.0 de CSR2 ! \n\nNouveautés : \n- L'ÉQUIPE DE RÊVE D'ÉLITE EST LÀ : réglage automatique, course, carburant, améliorations \n- Des décennies plus tard, Jerry rencontre un vieux rival. Est-ce une simple coïncidence ou le signe de quelque chose de plus sinistre ? (événement RETURN-Rev-Up) \n-Correction d'erreurs et optimisation \n\nConsultez Linker pour télécharger. Bonne course !",
+        "Meet the hub update 1.2.0! \nWhat's new: \n- NEW SECTION: SEASONS\n- NEW SECTION: PROFILE STYLE\n- WR: added driver profiles\n- AUTOSHOW: added direct link share\n- fix errors and optimization\n- other minor changes \n\nHappy racing!": "Découvrez la mise à jour du hub 1.2.0 !\nQuoi de neuf :\n- NOUVELLE SECTION : SAISONS\n- NOUVELLE SECTION : STYLE DE PROFIL\n- Records du Monde : ajout des profils pilotes\n- AUTOSHOW : ajout du partage de lien direct\n- Correction d'erreurs et optimisation\n- Autres changements mineurs\n\nBonne course !",
         "Music clip": "Clip musical",
         "Music volume": "Volume de la musique",
         "NEW": "NOUVEAU",
@@ -182,6 +182,34 @@
         "finished - {0} seconds": "terminé - {0} secondes",
         "finishing release...": "finalisation de la version...",
         "text coming soon...": "texte à venir...",
-        "unpacking...": "décompression..."
+        "unpacking...": "décompression...",
+        "Ranking position: ": "Position au classement : ",
+        "Total: ": "Total : ",
+        " points": " points",
+        " cars": " voitures",
+        "Prize": "Récompense",
+        "Prestige": "Prestige",
+        "Hey, buddy. It was one of the earliest seasons of the game... There were no prize cars back then.": "Hé, mon pote. C'était l'une des toutes premières saisons du jeu... Il n'y avait pas de voitures récompenses à l'époque.",
+        "Hello, sweetie. It was one of the earliest seasons of the game. There was no prize cup back then.": "Bonjour, ma belle. C'était l'une des premières saisons du jeu. Il n'y avait pas de coupe de prix à l'époque.",
+        "BEST CAR": "MEILLEURE VOITURE",
+        "SHARE THIS CAR:": "PARTAGER CETTE VOITURE :",
+        "DIRECT LINK": "LIEN DIRECT",
+        "IMAGE EXPORT": "EXPORTATION D'IMAGE",
+        "CANCEL": "ANNULER",
+        "PROFILE STYLES VIEWER": "VISIONNEUSE DE STYLES DE PROFIL",
+        "Only complete sets are displayed": "Seuls les ensembles complets sont affichés",
+        "SEASONS": "SAISONS",
+        "PROFILE STYLE": "STYLE DE PROFIL",
+        "Here you can see the key cars of each season": "Ici, vous pouvez voir les voitures clés de chaque saison",
+        "These are the prize cars of the current season of the crew championship": "Ce sont les voitures récompenses de la saison actuelle du championnat d'équipage",
+        "But that's not all, click here": "Mais ce n'est pas tout, cliquez ici",
+        "These cars will be used in the current season's Prestige Cup, isn't that great?": "Ces voitures seront utilisées dans la Coupe Prestige de la saison actuelle, n'est-ce pas génial ?",
+        "You can also check other seasons, let's watch the previous one": "Vous pouvez aussi consulter d'autres saisons, regardons la précédente",
+        "To quickly return to the current season at any time, simply click on the crew emblem": "Pour revenir rapidement à la saison actuelle à tout moment, cliquez simplement sur l'emblème de l'équipage",
+        "And of course, you can go straight to the AUTOSHOW by clicking on the car!": "Et bien sûr, vous pouvez aller directement à l'AUTOSHOW en cliquant sur la voiture !",
+        "MILESTONE": "JALON",
+        "Finally we can see the key cars of each season. Come with me, I'll show you!": "Enfin, nous pouvons voir les voitures clés de chaque saison. Venez avec moi, je vais vous montrer !",
+        "Jess Discord Bot": "Bot Discord Jess",
+        "Did you know I have a Discord bot? I joined Discord at TheMaintainers' request. Use the additional features and quick access to information when you can't use the hub.": "Saviez-vous que j'ai un bot Discord ? J'ai rejoint Discord à la demande de TheMaintainers. Utilisez les fonctionnalités supplémentaires et l'accès rapide à l'information lorsque vous ne pouvez pas utiliser le hub."
     }
 }
