--- a/Localisation/PT-BR.json
+++ b/Localisation/PT-BR.json
@@ -99,8 +99,8 @@
         "Let's make the app even cooler together!": "Vamos tornar o aplicativo ainda mais legal juntos!",
         "MILESTONE SEASON CAR": "CARRO MARCANTE DA TEMPORADA",
         "Main campaigns": "Campanhas principais",
-        "Meet the CSR2 update 6.0.1! \n\nWhat's new: \n- THE ELITE DREAM TEAM IS HERE: automatic tuning, racing, fuel, improvements \n- Decades later, Jerry encounters an old rival. Is it a simple coincidence or a sign of something more sinister? (RETURN-Rev-Up event) \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "Conheça a atualização 6.0.1 do CSR2! \n\nNovidades: \n- O TIME DOS SONHOS DE ELITE CHEGOU: tunagem automática, corridas, combustível, melhorias \n- Décadas depois, Jerry encontra um rival antigo. É uma simples coincidência ou um sinal de algo mais sinistro? (Evento RETURN-Rev-Up) \n-Correção de erros e otimização \n\nVerifique o Linker para baixar. Boas corridas!",
-        "Meet the hub update 1.1.5! \nWhat's new: \n- DONATE: enabled and top-donates added\n- AUTOSHOW: added fast snap-full export\n- gitbox-mini: updated visual special for gacha imports\n- added special hyperlink to our email\n- fix errors and optimization \n\nHappy racing!": "Conheça a atualização do hub 1.1.5! \nNovidades: \n- DOAÇÕES: ativadas e principais doadores adicionados\n- AUTOSHOW: adicionada exportação rápida snap-full\n- gitbox-mini: efeito visual especial atualizado para importações de gacha\n- adicionado hyperlink especial para o nosso email\n- correção de erros e otimização \n\nFelizes corridas!",
+        "Meet the CSR2 update 6.0! \n\nWhat's new: \n- THE ELITE DREAM TEAM IS HERE: automatic tuning, racing, fuel, improvements \n- Decades later, Jerry encounters an old rival. Is it a simple coincidence or a sign of something more sinister? (RETURN-Rev-Up event) \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "Conheça a atualização 6.0 do CSR2! \n\nNovidades: \n- O TIME DOS SONHOS DE ELITE CHEGOU: tunagem automática, corridas, combustível, melhorias \n- Décadas depois, Jerry encontra um rival antigo. É uma simples coincidência ou um sinal de algo mais sinistro? (Evento RETURN-Rev-Up) \n-Correção de erros e otimização \n\nVerifique o Linker para baixar. Boas corridas!",
+        "Meet the hub update 1.2.0! \nWhat's new: \n- NEW SECTION: SEASONS\n- NEW SECTION: PROFILE STYLE\n- WR: added driver profiles\n- AUTOSHOW: added direct link share\n- fix errors and optimization\n- other minor changes \n\nHappy racing!": "Conheça a atualização do hub 1.2.0!\nNovidades:\n- NOVA SEÇÃO: TEMPORADAS\n- NOVA SEÇÃO: ESTILO DE PERFIL\n- Recordes Mundiais: adicionamos perfis de piloto\n- AUTOSHOW: adicionamos compartilhamento de link direto\n- Correção de erros e otimização\n- Outras pequenas mudanças\n\nFelizes corridas!",
         "Music clip": "Clipe de música",
         "Music volume": "Volume da música",
         "NEW": "NOVO",
@@ -182,6 +182,34 @@
         "finished - {0} seconds": "finalizado - {0} segundos",
         "finishing release...": "finalizando versão...",
         "text coming soon...": "texto em breve...",
-        "unpacking...": "descompactando..."
+        "unpacking...": "descompactando...",
+        "Ranking position: ": "Posição no ranking: ",
+        "Total: ": "Total: ",
+        " points": " pontos",
+        " cars": " carros",
+        "Prize": "Prêmio",
+        "Prestige": "Prestígio",
+        "Hey, buddy. It was one of the earliest seasons of the game... There were no prize cars back then.": "Ei, cara. Essa foi uma das primeiras temporadas do jogo... Não havia carros prêmio naquela época.",
+        "Hello, sweetie. It was one of the earliest seasons of the game. There was no prize cup back then.": "Olá, querida. Essa foi uma das primeiras temporadas do jogo. Não havia copo de prêmios naquela época.",
+        "BEST CAR": "MELHOR CARRO",
+        "SHARE THIS CAR:": "COMPARTILHAR ESTE CARRO:",
+        "DIRECT LINK": "LINK DIRETO",
+        "IMAGE EXPORT": "EXPORTAR IMAGEM",
+        "CANCEL": "CANCELAR",
+        "PROFILE STYLES VIEWER": "VISUALIZADOR DE ESTILOS DE PERFIL",
+        "Only complete sets are displayed": "Apenas conjuntos completos são exibidos",
+        "SEASONS": "TEMPORADAS",
+        "PROFILE STYLE": "ESTILO DE PERFIL",
+        "Here you can see the key cars of each season": "Aqui você pode ver os carros-chave de cada temporada",
+        "These are the prize cars of the current season of the crew championship": "Estes são os carros prêmio da temporada atual do campeonato de crew",
+        "But that's not all, click here": "Mas isso não é tudo, clique aqui",
+        "These cars will be used in the current season's Prestige Cup, isn't that great?": "Estes carros serão usados na Copa Prestige da temporada atual, não é incrível?",
+        "You can also check other seasons, let's watch the previous one": "Você também pode verificar outras temporadas, vamos ver a anterior",
+        "To quickly return to the current season at any time, simply click on the crew emblem": "Para retornar rapidamente à temporada atual a qualquer momento, simplesmente clique no emblema da crew",
+        "And of course, you can go straight to the AUTOSHOW by clicking on the car!": "E claro, você pode ir diretamente para o AUTOSHOW clicando no carro!",
+        "MILESTONE": "MARCO",
+        "Finally we can see the key cars of each season. Come with me, I'll show you!": "Finalmente podemos ver os carros-chave de cada temporada. Venha comigo, vou te mostrar!",
+        "Jess Discord Bot": "Jess Bot do Discord",
+        "Did you know I have a Discord bot? I joined Discord at TheMaintainers' request. Use the additional features and quick access to information when you can't use the hub.": "Você sabia que tenho um bot no Discord? Entrei no Discord a pedido do TheMaintainers. Use os recursos adicionais e o acesso rápido à informação quando não puder usar o hub."
     }
 }
