--- a/Localisation/RU.json
+++ b/Localisation/RU.json
@@ -99,8 +99,8 @@
         "Let's make the app even cooler together!": "Давайте вместе сделаем приложение еще круче!",
         "MILESTONE SEASON CAR": "СЕЗОННАЯ МАШИНА",
         "Main campaigns": "Основные кампании",
-        "Meet the CSR2 update 6.0.1! \n\nWhat's new: \n- THE ELITE DREAM TEAM IS HERE: automatic tuning, racing, fuel, improvements \n- Decades later, Jerry encounters an old rival. Is it a simple coincidence or a sign of something more sinister? (RETURN-Rev-Up event) \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "Встречайте обновление CSR2 6.0.1! \n\nЧто нового: \n- ЗДЕСЬ ELITE DREAM TEAM: автоматический тюнинг, гонки, топливо, улучшения \n- Спустя десятилетия Джерри сталкивается со старым соперником. Это простое совпадение или признак чего-то более зловещего? (Событие RETURN-Rev-Up) \n-Исправление ошибок и оптимизация \n\nСсылка для скачивания в Linker. Удачных гонок!",
-        "Meet the hub update 1.1.5! \nWhat's new: \n- DONATE: enabled and top-donates added\n- AUTOSHOW: added fast snap-full export\n- gitbox-mini: updated visual special for gacha imports\n- added special hyperlink to our email\n- fix errors and optimization \n\nHappy racing!": "Встречайте обновление хаба 1.1.5! \nЧто нового: \n- ДОНАТЫ: добавлены топ-донаты\n- АВТОШОУ: добавлен быстрый экспорт snap-full\n- gitbox-mini: обновлены визуальные эффекты для импортных деталей\n- добавлена гиперссылка на нашу почту\n- исправление ошибок и оптимизация \n\nУдачных гонок!",
+        "Meet the CSR2 update 6.0! \n\nWhat's new: \n- THE ELITE DREAM TEAM IS HERE: automatic tuning, racing, fuel, improvements \n- Decades later, Jerry encounters an old rival. Is it a simple coincidence or a sign of something more sinister? (RETURN-Rev-Up event) \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "Встречайте обновление CSR2 6.0! \n\nЧто нового: \n- ЗДЕСЬ ELITE DREAM TEAM: автоматический тюнинг, гонки, топливо, улучшения \n- Спустя десятилетия Джерри сталкивается со старым соперником. Это простое совпадение или признак чего-то более зловещего? (Событие RETURN-Rev-Up) \n-Исправление ошибок и оптимизация \n\nСсылка для скачивания в Linker. Удачных гонок!",
+        "Meet the hub update 1.2.0! \nWhat's new: \n- NEW SECTION: SEASONS\n- NEW SECTION: PROFILE STYLE\n- WR: added driver profiles\n- AUTOSHOW: added direct link share\n- fix errors and optimization\n- other minor changes \n\nHappy racing!": "Встречайте обновление хаба 1.2.0!\nЧто нового:\n- НОВЫЙ РАЗДЕЛ: СЕЗОНЫ\n- НОВЫЙ РАЗДЕЛ: СТИЛЬ ПРОФИЛЯ\n- Мировые рекорды: добавлены профили гонщиков\n- АВТОШОУ: добавлена возможность делиться прямой ссылкой\n- Исправление ошибок и оптимизация\n- Другие незначительные изменения\n\nУдачных гонок!",
         "Music clip": "Музыка",
         "Music volume": "Громкость музыки",
         "NEW": "НОВОЕ",
@@ -182,6 +182,34 @@
         "finished - {0} seconds": "завершено - за {0} секунд",
         "finishing release...": "завершение обработки релиза...",
         "text coming soon...": "текст в разработке...",
-        "unpacking...": "распаковка..."
+        "unpacking...": "распаковка...",
+        "Ranking position: ": "Позиция в рейтинге: ",
+        "Total: ": "Всего: ",
+        " points": " очков",
+        " cars": " машин",
+        "Prize": "Призовые",
+        "Prestige": "Престижные",
+        "Hey, buddy. It was one of the earliest seasons of the game... There were no prize cars back then.": "Привет, приятель. Это был один из самых ранних сезонов игры... Тогда еще не было призовых машин.",
+        "Hello, sweetie. It was one of the earliest seasons of the game. There was no prize cup back then.": "Привет, дорогой гонщик)) Это был один из самых ранних сезонов игры. В то время не было призового кубка.",
+        "BEST CAR": "ЛУЧШАЯ МАШИНА",
+        "SHARE THIS CAR:": "ПОДЕЛИТЬСЯ ЭТОЙ МАШИНОЙ:",
+        "DIRECT LINK": "ПРЯМАЯ ССЫЛКА",
+        "IMAGE EXPORT": "ЭКСПОРТ ИЗОБРАЖЕНИЯ",
+        "CANCEL": "ОТМЕНА",
+        "PROFILE STYLES VIEWER": "ПРОСМОТР СТИЛЕЙ ПРОФИЛЯ",
+        "Only complete sets are displayed": "Отображаются только полные наборы",
+        "SEASONS": "СЕЗОНЫ",
+        "PROFILE STYLE": "СТИЛЬ ПРОФИЛЯ",
+        "Here you can see the key cars of each season": "Здесь можно увидеть ключевые машины каждого сезона",
+        "These are the prize cars of the current season of the crew championship": "Это призовые машины текущего сезона чемпионата команд",
+        "But that's not all, click here": "Но это еще не все, нажми здесь",
+        "These cars will be used in the current season's Prestige Cup, isn't that great?": "Эти машины будут использоваться в Кубке Престижа текущего сезона, круто да?",
+        "You can also check other seasons, let's watch the previous one": "Ты также можешь глянуть другие сезоны, давай посмотрим предыдущий",
+        "To quickly return to the current season at any time, simply click on the crew emblem": "Чтобы быстро вернуться к текущему сезону в любое время, просто нажми на эмблему экипажа",
+        "And of course, you can go straight to the AUTOSHOW by clicking on the car!": "И, конечно же, можно перейти прямо в АВТОШОУ, нажав на машину!",
+        "MILESTONE": "ВЕХА",
+        "Finally we can see the key cars of each season. Come with me, I'll show you!": "Наконец-то мы можем увидеть ключевые машины каждого сезона. Пойдем со мной, я покажу тебе!",
+        "Jess Discord Bot": "Jess Discord Бот",
+        "Did you know I have a Discord bot? I joined Discord at TheMaintainers' request. Use the additional features and quick access to information when you can't use the hub.": "Вы знали, что у меня есть Discord бот? Я присоединилась к Discord по просьбе TheMaintainers. Используйте дополнительные функции и быстрый доступ к информации, когда не можете использовать хаб."
     }
 }
